config-https/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app1.example.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: app1-credential
    hosts:
    - "app1.example.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: redirect-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "example.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: example-credential
    hosts:
    - "example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: redirect-vs
spec:
  hosts:
  - "example.com"
  gateways:
  - redirect-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2/callback
    route:
    - destination:
        host: oauth2-proxy.foo.svc.cluster.local
        port:
          number: 80
